syntax = "proto3";

package user;

// User service definition
service UserService {
  // Create a new user
  rpc CreateUser (CreateUserRequest) returns (UserResponse);
  
  // Get user by ID
  rpc GetUser (GetUserRequest) returns (UserResponse);
  
  // Get user by email
  rpc GetUserByEmail (GetUserByEmailRequest) returns (UserResponse);
  
  // List all users
  rpc ListUsers (ListUsersRequest) returns (ListUsersResponse);
  
  // Update user
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse);
  
  // Delete user
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse);
}

// Messages
message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string created_at = 4;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
}

message GetUserRequest {
  string id = 1;
}

message GetUserByEmailRequest {
  string email = 1;
}

message ListUsersRequest {
  int32 page = 1;
  int32 limit = 2;
}

message ListUsersResponse {
  repeated User users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message UpdateUserRequest {
  string id = 1;
  string name = 2;
  string email = 3;
}

message DeleteUserRequest {
  string id = 1;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

message UserResponse {
  User user = 1;
}
